                          In-Development
                   ------------------------------

This is the stable branch of Glimpse. Unlike earlier stable branches,
we do allow some new features here, if they are not too invasive.
Otherwise, this branch is only for bug-fixes.

Overview of Changes in Glimpse 0.1.9
====================================
* Uplifted BABL version from 0.1.68 to 0.1.78
* Uplifted Mypaint-Brushes from 1.3.0 to 2.0.2
* Uplifted LibMyPaint from 1.3.0 to 1.5.1
* Uplifted GEGL version from 0.4.16 to 0.4.22
* Uplifted GNU Image Manipulation Program base from 2.10.12 to 2.10.18
* Updated `HACKING.md` and GEGL/BABL build jobs to use new `meson` build process
* Refactored `libgimp*` to `libglimpse*` to assist Linux package repository maintainers
* Removed git submodules previously provided for convenience only
* Moved Vagrant support files into a dedicated folder in `build-aux` directory
* Updated Vagrant build process to use 2GB RAM, 2 CPUs and new `meson` builds
* Updated the `README.MD` file with more current information
* Backported high contrast icon themes from GNU Image Manipulation Program 2.10.18
* Added new application icon in About window
* Added new application icons to the rest of the application
* Replaced dozens of icons that previously used Wilber's face in icon packs
* Fixed the icon pack previewer in the Preferences menu
* Moved to new wiki site and updated links to https://github.com/glimpse-editor/Glimpse/wiki
* Moved to new Github Pages site and updated links to https://glimpse-editor.github.io
* TO BE DETERMINED - Still in development

Overview of Changes in Glimpse 0.1.2 Release 2
==============================================
* Resolved upstream bug that caused the application to crash on GNOME 3.36
* Uplifted GNOME platform version used by Flatpak to 3.36

Overview of Changes in Glimpse 0.1.2
====================================

* Updated translation files so they use the correct program name more often